--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
 		"start": "node server.js"
 	},
 	"dependencies": {
+		"body-parser": "^1.19.0",
+		"cors": "^2.8.5",
 		"dotenv": "^8.2.0",
 		"express": "^4.16.4",
-		"cors": "^2.8.5"
+		"mongodb": "^4.2.0",
+		"mongoose": "^6.0.13",
+		"shortid": "^2.2.16"
 	},
 	"repository": {
 		"url": "https://github.com/freeCodeCamp/boilerplate-project-exercisetracker"
